# BMSTU-3-cem

./: .gitignore  README.md
lab_01/: data.txt  main.py  Динь_Вьет_Ань_отчет_1_ВА.docx
lab_02/: app.py  main.py  points.xlsx
lab_03/: main  main.c  table.txt  ОТЧЕТ.docx
lab_04/: input2d1.txt  input2d2.txt  main2d.py  main3d.py
lab_05/: main.py
tài liệu/: ВА лаб1.docx  ВАлаб2.docx  ВАлаб3.docx
tài liệu/BMSTU-CA/: README.md
tài liệu/BMSTU-CA-sem4-main/: README.md
tài liệu/BMSTU-CA-sem4-main/lab_01/docs/: КозловаИ_ИУ7-42Б_ВАлаб1.docx
tài liệu/BMSTU-CA-sem4-main/lab_01/src/: app.py  func.py  io.py  main.py  points.xlsx
tài liệu/BMSTU-CA-sem4-main/lab_02/docs/: КозловаИ_ИУ7-42Б_ВАлаб2.docx
tài liệu/BMSTU-CA-sem4-main/lab_02/src/: app.py  main.py
tài liệu/BMSTU-CA-sem4-main/lab_03/docs/: КозловаИ_ИУ7-42Б_ВАлаб3.docx
tài liệu/BMSTU-CA-sem4-main/lab_03/src/: main.c  table.c  table.txt
tài liệu/BMSTU-CA-sem4-main/lab_04/src/: main.py
tài liệu/BMSTU-CA/lab_01/: CMakeLists.txt  data.txt  data1.txt  data2.txt
tài liệu/BMSTU-CA/lab_01/inc/: Matrix.h  Menu.h  interpolate.h
tài liệu/BMSTU-CA/lab_01/src/: Menu.cpp  MyErrors.cpp  interpolate.cpp  main.cpp
tài liệu/BMSTU-CA/lab_02/: CMakeLists.txt  data.txt
tài liệu/BMSTU-CA/lab_03/: CMakeLists.txt
tài liệu/BMSTU-CA/lab_03/inc/: CppConsoleTable.hpp  Matrix.h  Menu.h  MyErrors.h  interpolate.h
tài liệu/BMSTU-CA/lab_03/src/: Matrix.cpp  Menu.cpp  MyErrors.cpp  interpolate.cpp  main.cpp
tài liệu/BMSTU-CA/lab_04/: d2.py  d3.py  main.py
tài liệu/BMSTU-CA/lab_05/: main.py
(+12 files in other folders)
